<resources>
    <string name="app_name">Arbolizapp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Nombre de Usuario o Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="action_sign_in_short">Inicio de sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre de usuario no valido</string>
    <string name="invalid_password">La contraseña debe ser al menos 6 números o letras</string>
    <string name="tv_registrar"><u>¿Eres nuevo? Registrate</u></string>
    <string name="texto_cambiar_contraseña"><u>¿Olvidaste tu contraseña?</u>/</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to menu -->
    <string name="item_inicio">Inicio</string>
    <string name="item_cuenta">Perfil</string>
    <string name="item_estatus">Estatus solicitud</string>
    <string name="item_catalago">Catálago</string>
    <string name="item_vale">Vale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_map">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"></string>
    <string name="menu_gallery"></string>
    <string name="menu_slideshow"></string>

    <string name="home_second">Home Second</string>

    <string name="cerrarSesion"><u>Cerrar Sesión</u></string>
    <string name="estatusSolicitud">Estatus Solicitud</string>

    <!-- Strings relacionados a vivero -->
    <string name="perfil">Perfil</string>
    <string name="title_activity_contenedor_solicitud">ContenedorSolicitudActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="correo_nuevo">Correo nuevo: </string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="confirmar_correo">Confirmar correo: </string>
    <string name="nuevo_nombre_de_usuario">Nuevo nombre de usuario: </string>
    <string name="ejemplo_hotmail_com">ejemplo@hotmail.com</string>
    <string name="nombre_de_usuario">Jane Doe</string>
    <string name="cancelar"><u>CANCELAR</u></string>
    <string name="nuevo_tel_fono">Nuevo teléfono: </string>
    <string name="numeroTel">### ### ####</string>
    <string name="telefono">Teléfono:</string>
    <string name="contraActual">***************</string>
    <string name="contrase_a_nueva">Contraseña nueva:</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="correo">Correo:</string>
    <string name="title_activity_generar_solicitud">GenerarSolicitud</string>
    <string name="seleccionar_foto">SELECCIONAR FOTO</string>
    <string name="por_entregar">Por entregar</string>
    <string name="entregados">Entregados</string>
    <string name="entregado">ENTREGADO</string>
    <string name="ver_mas">VER MÁS</string>
    <string name="nombre">Nombre:</string>
    <string name="familia">Familia:</string>
    <string name="solicitud">Solicitud #:</string>
    <string name="fecha_de_solicitud">Fecha de solicitud:</string>
    <string name="generar_evidencia">GENERAR EVIDENCIA</string>
    <string name="ubicacion">Ubicación:</string>


</resources>
