<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@drawable/dialog_shape"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/contraseñaActula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="#515C6F"
        android:textColorHint="#515C6F"
        android:textSize="25sp"
        android:text="@string/telefono"
        />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/numeroTel"
        android:inputType="number"
        android:layout_marginBottom="56dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/nuevaContra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="#515C6F"
        android:textColorHint="#515C6F"
        android:textSize="25sp"
        android:text="@string/contrase_a_nueva"
        />

    <EditText
        android:id="@+id/editNuevaContra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@null"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/contraActual"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/confirmarNuevaContra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="#515C6F"
        android:textColorHint="#515C6F"
        android:textSize="25sp"
        android:text="@string/confirmar_contrase_a"
        />

    <EditText
        android:id="@+id/editConfirmarNuevaContra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@null"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/contraActual"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/guardarCambioContra"
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_redondo"
        android:backgroundTint="#019A13"
        android:fontFamily="@font/roboto_black"
        android:layout_marginBottom="40dp"
        android:text="@string/guardar_cambios"
        android:textColor="#FFFFFF" />

</LinearLayout>