<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/cambiarPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/nuevo_tel_fono"
        android:textColor="#515C6F"
        android:textColorHint="#515C6F"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/numeroTel"
        android:inputType="number"
        android:layout_marginBottom="40dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/guardarCambioTelefono"
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_redondo"
        android:backgroundTint="#019A13"
        android:fontFamily="@font/roboto_black"
        android:text="@string/guardar_cambios"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="40dp"
        />
</LinearLayout>