<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight=".7"
        android:layout_height="wrap_content">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="413dp"
            android:layout_height="627dp"
            >
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabGravity="center"
                android:background="@drawable/borde"
                app:tabTextColor="@color/appColorVivero">
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabpersona_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/profile"
                    android:text="@string/perfil" />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabporentregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/porentregar"
                    android:text="@string/por_entregar"
                    />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabentregados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/invite"
                    android:text="@string/entregados" />
            </com.google.android.material.tabs.TabLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/barra"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#019A13"
                app:srcCompat="@drawable/vacia" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>