<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/circulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/circle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="236dp"
            android:layout_height="168dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/bienvenidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Bienvenidos!"
            android:textColor="#000000"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inicio de Sesión"
            android:textColor="#606060"
            android:textSize="16sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/user" />

                <EditText
                    android:id="@+id/username_email"
                    android:layout_width="323dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_email"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="323dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </LinearLayout>
            <CheckBox
                android:id="@+id/recordar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recordarme" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/login"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/btn_redondo"
                android:backgroundTint="#019A13"
                android:fontFamily="@font/roboto_black"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv_registrar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/tv_registrar"
                android:textColor="#0060BF"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tvOlvidecontraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/texto_cambiar_contraseña"
                android:textColor="#0060BF"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/hoja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:scaleType="centerInside"
            android:translationZ="-1dp"
            app:srcCompat="@drawable/hoja"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-30dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/barra"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#019A13"
            android:translationZ="1dp"
            app:srcCompat="@drawable/vacia" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>