<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/circle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="236dp"
            android:layout_height="168dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_height="wrap_content">
        <!--Correo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:hint="Correo"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <!--Nombre completo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:hint="Nombre Completo"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <!--Nombre de usuario-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/user"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:hint="Nombre de Usuario"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <!--Contraaseña-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </LinearLayout>
        <!-- Confirmar contraaseña-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/confpassword"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_password"
                android:hint="Confirmar contraseña"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/btn_redondo"
                android:backgroundTint="#019A13"
                android:fontFamily="@font/roboto_black"
                android:text="REGISTRARSE"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tvCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cancelar"
                android:textColor="#0060BF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/barra"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#019A13"
            android:translationZ="1dp"
            app:srcCompat="@drawable/vacia" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>